dotnet-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
spec:
  type: ClusterIP
  selector:
    app: dotnet-core
  ports:
    - protocol: TCP
      port: 801
      targetPort: 80
